load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "tar")

# docker-gnmi-sidecar: k8s-managed gNMI sidecar (systemd stub + pod control).
#
# Mirrors dockers/docker-gnmi-sidecar/Dockerfile.j2 + rules/docker-gnmi-sidecar.mk.
#
# INSTALL_DEBS (libswsscommon, python3-swsscommon, libyang3) and
# INSTALL_PYTHON_WHEELS (sonic-py-common) are all already shipped by the parent
# docker-config-engine-trixie base, so nothing extra is layered here (Make
# re-`dpkg -i`s them redundantly; the Bazel base already carries them).
#
# _FILES (rules/docker-gnmi-sidecar.mk) map to files that the legacy build
# stages into the docker's files/ dir before COPY:
#   CONTAINER_CHECKER -> files/image_config/monit/container_checker
#   GNMI_SYSTEMD      -> files/scripts/gnmi.sh (symlink to service_mgmt.sh)
#   K8S_POD_CONTROL   -> files/scripts/k8s_pod_control.sh

# COPY directives from Dockerfile.j2:
#   systemd_stub.py                 -> /usr/bin/ (0755)
#   systemd_scripts/                -> /usr/share/sonic/systemd_scripts/
#   files/container_checker         -> /usr/share/sonic/systemd_scripts/container_checker
#   files/gnmi.sh                   -> /usr/share/sonic/systemd_scripts/gnmi_v1.sh
#   files/k8s_pod_control.sh        -> /usr/share/sonic/scripts/k8s_pod_control.sh
#   supervisord.conf                -> /etc/supervisor/conf.d/
tar(
    name = "files",
    srcs = [
        "systemd_stub.py",
        "systemd_scripts/gnmi.service",
        "systemd_scripts/gnmi.sh",
        "supervisord.conf",
        "//files/image_config/monit:container_checker",
        "//files/scripts:service_mgmt.sh",
        "//files/scripts:k8s_pod_control.sh",
    ],
    mtree = [
        "./usr/bin/systemd_stub.py uid=0 gid=0 mode=0755 type=file content=$(location :systemd_stub.py)",
        "./usr/share/sonic/systemd_scripts/gnmi.service uid=0 gid=0 mode=0644 type=file content=$(location :systemd_scripts/gnmi.service)",
        "./usr/share/sonic/systemd_scripts/gnmi.sh uid=0 gid=0 mode=0644 type=file content=$(location :systemd_scripts/gnmi.sh)",
        "./usr/share/sonic/systemd_scripts/container_checker uid=0 gid=0 mode=0755 type=file content=$(location //files/image_config/monit:container_checker)",
        "./usr/share/sonic/systemd_scripts/gnmi_v1.sh uid=0 gid=0 mode=0755 type=file content=$(location //files/scripts:service_mgmt.sh)",
        "./usr/share/sonic/scripts/k8s_pod_control.sh uid=0 gid=0 mode=0755 type=file content=$(location //files/scripts:k8s_pod_control.sh)",
        "./etc/supervisor/conf.d/supervisord.conf uid=0 gid=0 mode=0644 type=file content=$(location :supervisord.conf)",
    ],
)

# Dockerfile.j2 final stage: FROM docker-config-engine-trixie,
# ENTRYPOINT ["/usr/local/bin/supervisord"], ENV DEBIAN_FRONTEND / IS_V1_ENABLED.
# IMAGE_VERSION is a `docker build` ARG, not a runtime input, so it is not
# reproduced (same treatment as the other migrated dockers). IS_V1_ENABLED is a
# genuine runtime env the entrypoint/supervisord reads, so it is kept.
oci_image(
    name = "docker-gnmi-sidecar",
    base = "//dockers/docker-config-engine-trixie:docker-config-engine-trixie",
    entrypoint = ["/usr/local/bin/supervisord"],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
        "IS_V1_ENABLED": "false",
    },
    tars = [
        ":files",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = "docker-gnmi-sidecar",
    repo_tags = ["docker-gnmi-sidecar:latest"],
)
