load("@rules_deb//distroless:defs.bzl", "flatten")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@tar.bzl", "tar")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# docker-macsec — MACsec agent container.
#
# base = docker-swss-layer-trixie. Verified against the Make docker-macsec image
# package delta vs that base: the ONLY additions are `wpasupplicant` and its
# runtime .so dep `libpcsclite1`; the file delta is those two debs' contents plus
# 6 locally-COPY'd files (supervisord.conf, critical_processes,
# etc/wpa_supplicant.conf, 3 cli plugins).
#
# NOT included (differs from the sonic-bazel bookworm reference, which over-packs
# — this project follows the Make image as ground truth):
#   - No python_layer / sonic-utilities. rules/docker-macsec.mk declares
#     _INSTALL_PYTHON_WHEELS = SONIC_UTILITIES_PY3, but Dockerfile.j2 never calls
#     install_python_wheels, so the Make image contains ZERO sonic-utilities /
#     pip content (measured python dist-packages delta = 0).
#   - No supervisor-proc-exit-listener COPY. The swss-layer base already ships it
#     (the -rs variant referenced by supervisord.conf), so it is not re-copied.
#   - python3-swsscommon / libyang3-py3 (_INSTALL_DEBS) are already in the base
#     (package delta = 0), so not re-layered.
# =============================================================================

# wpasupplicant .deb (rules/docker-macsec.mk _DEPENDS; Dockerfile.j2 dpkg -i).
# `_data` = file contents, `_statusd` = distroless dpkg status.d stub so
# `dpkg -l` lists the package. wpasupplicant is an Approach-A apt-repackage of
# trixie upstream (does NOT include the SONiC macsec_sonic driver — see
# src/wpasupplicant and its verification report).
flatten(
    name = "sonic_pkgs",
    deduplicate = True,
    tars = [
        "@wpasupplicant//:wpasupplicant_2.9.0-14.deb_data",
        "@wpasupplicant//:wpasupplicant_2.9.0-14.deb_statusd",
    ],
)

# wpasupplicant's runtime .so dependency, added on top of the base. flatten()
# does NOT resolve Depends, so libpcsclite1 is listed explicitly (registered in
# the shared @trixie pool in dockers/docker-base-trixie/base_trixie.MODULE.bazel).
flatten(
    name = "apt_layer",
    deduplicate = True,
    tars = [
        "@trixie//libpcsclite1:data",
    ],
)

# Dockerfile.j2 COPY directives (rules/docker-macsec.mk _FILES + cli/ tree).
# wpasupplicant postinst side-effects (distroless runs no maintainer scripts,
# so replicate per docker-base/docker-database convention). The Make image runs
# `dpkg -i wpasupplicant.deb` whose postinst calls `deb-systemd-helper enable
# wpa_supplicant.service`, creating two enablement symlinks (both -> the unit at
# /lib/systemd/system/wpa_supplicant.service) plus deb-systemd-helper bookkeeping
# files. These are inert under the container's supervisord init (systemd is not
# the init and macsecmgrd launches /sbin/wpa_supplicant directly), but are
# replicated here for Make image parity.
genrule(
    name = "wpa_dsh_files",
    outs = [
        "wpa_supplicant.service.dsh-also",
        "dsh_dbus_fi_w1",
        "dsh_multiuser_wpa_supplicant.service",
    ],
    cmd = r"""
printf '/etc/systemd/system/dbus-fi.w1.wpa_supplicant1.service\n/etc/systemd/system/multi-user.target.wants/wpa_supplicant.service\n' > $(location wpa_supplicant.service.dsh-also)
: > $(location dsh_dbus_fi_w1)
: > $(location dsh_multiuser_wpa_supplicant.service)
""",
)

tar(
    name = "files",
    srcs = [
        "supervisord.conf",
        "critical_processes",
        "etc/wpa_supplicant.conf",
        "cli/clear/plugins/clear_macsec_counter.py",
        "cli/config/plugins/macsec.py",
        "cli/show/plugins/show_macsec.py",
        "wpa_supplicant.service.dsh-also",
        "dsh_dbus_fi_w1",
        "dsh_multiuser_wpa_supplicant.service",
    ],
    mtree = [
        "./etc/supervisor/conf.d/supervisord.conf uid=0 gid=0 mode=0644 type=file content=$(location :supervisord.conf)",
        "./etc/supervisor/critical_processes uid=0 gid=0 mode=0644 type=file content=$(location :critical_processes)",
        "./etc/wpa_supplicant.conf uid=0 gid=0 mode=0644 type=file content=$(location :etc/wpa_supplicant.conf)",
        "./cli/clear/plugins/clear_macsec_counter.py uid=0 gid=0 mode=0644 type=file content=$(location :cli/clear/plugins/clear_macsec_counter.py)",
        "./cli/config/plugins/macsec.py uid=0 gid=0 mode=0644 type=file content=$(location :cli/config/plugins/macsec.py)",
        "./cli/show/plugins/show_macsec.py uid=0 gid=0 mode=0644 type=file content=$(location :cli/show/plugins/show_macsec.py)",
        # wpasupplicant postinst: deb-systemd-helper enable wpa_supplicant.service.
        "./etc/systemd/system/multi-user.target.wants/wpa_supplicant.service type=link link=/lib/systemd/system/wpa_supplicant.service",
        "./etc/systemd/system/dbus-fi.w1.wpa_supplicant1.service type=link link=/lib/systemd/system/wpa_supplicant.service",
        # deb-systemd-helper bookkeeping (empty state files + .dsh-also listing).
        "./var/lib/systemd/deb-systemd-helper-enabled/wpa_supplicant.service.dsh-also uid=0 gid=0 mode=0644 type=file content=$(location wpa_supplicant.service.dsh-also)",
        "./var/lib/systemd/deb-systemd-helper-enabled/dbus-fi.w1.wpa_supplicant1.service uid=0 gid=0 mode=0644 type=file content=$(location dsh_dbus_fi_w1)",
        "./var/lib/systemd/deb-systemd-helper-enabled/multi-user.target.wants/wpa_supplicant.service uid=0 gid=0 mode=0644 type=file content=$(location dsh_multiuser_wpa_supplicant.service)",
    ],
)

# Make docker-macsec final image config (Dockerfile.j2):
# Entrypoint=["/usr/local/bin/supervisord"], Env adds DEBIAN_FRONTEND
# (PATH inherited from base).
oci_image(
    name = "docker-macsec",
    base = "//dockers/docker-swss-layer-trixie:docker-swss-layer-trixie",
    entrypoint = ["/usr/local/bin/supervisord"],
    env = {
        "DEBIAN_FRONTEND": "noninteractive",
    },
    workdir = "/",
    tars = [
        ":sonic_pkgs",
        ":apt_layer",
        ":files",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = "docker-macsec",
    repo_tags = ["docker-macsec:latest"],
)
